name: d10
version: 0.1.0.0
category: Data
synopsis: Digits 0-9

description:
    Data types representing the digits zero through nine.

homepage:    https://github.com/typeclasses/d10
bug-reports: https://github.com/typeclasses/d10/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2018 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/typeclasses/d10

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
      base >=4.7 && <5
    , template-haskell

  exposed-modules:
      Data.D10
